<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/bill_amount_title"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <EditText
        android:id="@+id/amount_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/border"
        android:hint="@string/bill_amount"
        android:inputType="numberDecimal"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/ImageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_text_view">

        <ImageButton
            android:id="@+id/serviceRateIcon1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBackground"
            android:contentDescription="@string/service_rating_icons"
            android:src="@drawable/ic_001_frown" />

        <ImageButton
            android:id="@+id/serviceRateIcon2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBackground"
            android:contentDescription="@string/service_rating_icons"
            android:src="@drawable/ic_002_smile" />

        <ImageButton
            android:id="@+id/serviceRateIcon3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBackground"
            android:contentDescription="@string/service_rating_icons"
            android:src="@drawable/ic_003_happy" />

        <ImageButton
            android:id="@+id/serviceRateIcon4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBackground"
            android:contentDescription="@string/service_rating_icons"
            android:src="@drawable/ic_004_emoticon_with_happy_face" />

        <ImageButton
            android:id="@+id/serviceRateIcon5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBackground"
            android:contentDescription="@string/service_rating_icons"
            android:src="@drawable/ic_005_happy_1" />

        <ImageButton
            android:id="@+id/serviceRateIcon6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBackground"
            android:contentDescription="@string/service_rating_icons"
            android:src="@drawable/ic_006_emoji" />

    </LinearLayout>

    <TextView
        android:id="@+id/service_rating_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/service_rating"
        android:textColor="@color/colorPrimary"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageLayout" />

    <TextView
        android:id="@+id/tip_percent_text_view"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:padding="9dp"
        android:text="@string/tip_percent"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_rating_title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tip_Amt_text_view"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:padding="9dp"
        android:text="@string/tip_amt"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_rating_title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/totalBill"
        android:layout_width="248dp"
        android:layout_height="43dp"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:text="@string/total_bill"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_rating_title" />

    <TextView
        android:id="@+id/bill_total_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:text=""
        android:padding="13dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalBill" />

</androidx.constraintlayout.widget.ConstraintLayout>